syntax = "proto3";
package single_value_store;

service SingleValueStore {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
}

message GetRequest {
}

message GetResponse {
    uint64 value = 1;
}

message SetRequest {
    uint64 value = 2;
}

message SetResponse {
}